# service/src/main/java/br/com/sw2you/realmeet/domain/entity/Allocation.java
@@ -5,12 +5,14 @@ import static java.util.Objects.isNull;
 
 import br.com.sw2you.realmeet.domain.model.Employee;
 import java.time.OffsetDateTime;
+import java.util.List;
 import java.util.Objects;
 import javax.persistence.*;
 
 @Entity
 @Table(name = "allocation")
 public class Allocation {
+    public static final List<String> SORTABLE_FIELDS = List.of("startAt", "endAt");
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
