# service/src/main/java/br/com/sw2you/realmeet/validator/AllocationValidator.java
@@ -1,5 +1,6 @@
 package br.com.sw2you.realmeet.validator;
 
+import static br.com.sw2you.realmeet.util.DateUtils.*;
 import static br.com.sw2you.realmeet.util.DateUtils.now;
 import static br.com.sw2you.realmeet.validator.ValidatorConstants.*;
 import static br.com.sw2you.realmeet.validator.ValidatorUtils.*;
@@ -7,8 +8,11 @@ import static br.com.sw2you.realmeet.validator.ValidatorUtils.*;
 import br.com.sw2you.realmeet.api.model.CreateAllocationDTO;
 import br.com.sw2you.realmeet.api.model.UpdateAllocationDTO;
 import br.com.sw2you.realmeet.domain.repository.AllocationRepository;
+import br.com.sw2you.realmeet.util.DateUtils;
 import java.time.Duration;
 import java.time.OffsetDateTime;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -24,16 +28,21 @@ public class AllocationValidator {
         validateSubject(createAllocationDTO.getSubject(), validationErrors);
         validateEmployeeName(createAllocationDTO.getEmployeeName(), validationErrors);
         validateEmployeeEmail(createAllocationDTO.getEmployeeEmail(), validationErrors);
-        validateDates(createAllocationDTO.getStartAt(), createAllocationDTO.getEndAt(), validationErrors);
+        validateDates(
+                createAllocationDTO.getRoomId(),
+                createAllocationDTO.getStartAt(),
+                createAllocationDTO.getEndAt(),
+                validationErrors
+        );
         throwOnError(validationErrors);
     }
 
-    public void validate(Long allocationId, UpdateAllocationDTO updateAllocationDTO) {
+    public void validate(Long allocationId, Long roomId, UpdateAllocationDTO updateAllocationDTO) {
         var validationErrors = new ValidationErrors();
 
         validateRequired(allocationId, ALLOCATION_ID, validationErrors);
         validateSubject(updateAllocationDTO.getSubject(), validationErrors);
-        validateDates(updateAllocationDTO.getStartAt(), updateAllocationDTO.getEndAt(), validationErrors);
+        validateDates(roomId, updateAllocationDTO.getStartAt(), updateAllocationDTO.getEndAt(), validationErrors);
 
         throwOnError(validationErrors);
     }
@@ -67,6 +76,7 @@ public class AllocationValidator {
     }
 
     private void validateDates(
+            Long roomId,
             OffsetDateTime startAt,
             OffsetDateTime endAt,
             ValidationErrors validationErrors
@@ -75,7 +85,7 @@ public class AllocationValidator {
             validateDateOrdering(startAt, endAt, validationErrors);
             validateDateInTheFuture(startAt, validationErrors);
             validateDuration(startAt, endAt, validationErrors);
-            validateIfTimeAvailable(startAt, endAt, validationErrors);
+            validateIfTimeAvailable(roomId, startAt, endAt, validationErrors);
         }
     }
 
@@ -116,10 +126,16 @@ public class AllocationValidator {
     }
 
     private void validateIfTimeAvailable(
+            Long roomId,
             OffsetDateTime startAt,
             OffsetDateTime endAt,
             ValidationErrors validationErrors
     ) {
-        //TODO
+        allocationRepository
+                .findAllWithFilters(null, roomId, now(), endAt)
+                .stream()
+                .filter(a -> isOverLapping(startAt, endAt, a.getStartAt(), a.getEndAt()))
+                .findFirst()
+                .ifPresent(__ -> validationErrors.add(ALLOCATION_START_AT, ALLOCATION_START_AT + OVERLAPS));
     }
 }
